--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -109,5 +109,7 @@ bin.includes = plugin.xml,\
                libs/xml-apis-1.0.b2.jar,\
                libs/xmlbeans-2.3.0.jar,\
                libs/xsd-2.6.0.jar,\
-               libs/zt-zip-1.6.jar
+               libs/zt-zip-1.6.jar,\
+               libs/olca-jsonld-1.0.0.jar,\
+               libs/compiler-0.8.17.jar
 
