--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -62,7 +62,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.23.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar" sourcepath="/olca-core"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-0.3.0.jar"/>
