--- a/olca-app-html/package.json
+++ b/olca-app-html/package.json
@@ -3,8 +3,8 @@
   "version": "1.4.1",
   "devDependencies": {
     "coffee": "^1.0.0",
-    "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.1",
     "gulp-clientjade": "0.0.2",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.5.2",
