refactored Sankey diagram package; removed toolbar action contributions of Sankey diagram due to memory leaks

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -136,8 +136,7 @@
             default="false"
             icon="icons/analyze.gif"
             id="editors.analyze"
-            name="Analyze viewer"
-            contributorClass="org.openlca.app.results.analysis.AnalysisEditorActions">
+            name="Analyze viewer">
       </editor>
       <editor
             class="org.openlca.app.results.simulation.SimulationEditor"
