--- a/olca-app-build/build.properties
+++ b/olca-app-build/build.properties
@@ -22,7 +22,7 @@
 openlca_version = 1.4.2
 # the openLCA version + build id that can be used for file names and
 # display but the NSIS build will fail with this version.
-openlca_version_id = 1.4.2.beta1
+openlca_version_id = 1.4.2
 
 openlcaupdatesiteparam = -Dorg.openlca.core.updatesite=http://nexus.openlca.org/updatesite
 
@@ -60,9 +60,7 @@ collectingFolder=${archivePrefix}
 
 configs=win32, win32, x86 & \
 	win32,win32,x86_64 & \
-	macosx, cocoa, x86 & \
 	macosx, cocoa, x86_64 & \
-	linux, gtk, x86 & \
 	linux, gtk, x86_64
 
 #configs=linux, gtk, x86
