--- a/olca-app-html/package.json
+++ b/olca-app-html/package.json
@@ -16,5 +16,13 @@
     "nib": "^1.1.0",
     "run-sequence": "^1.0.2",
     "stylus": "^0.50.0"
+  },
+  "dependencies": {
+    "angular": "^1.4.3",
+    "angular-sanitize": "^1.4.3",
+    "bootstrap": "^3.3.5",
+    "codemirror": "^5.5.0",
+    "d3": "^3.5.6",
+    "jquery": "^2.1.4"
   }
 }
