updated to new modules version

--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry exported="true" kind="lib" path="libs/compiler-0.8.17.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.0.0.jar" sourcepath="/olca-jsonld"/>
 	<classpathentry exported="true" kind="lib" path="libs/bcprov-jdk16-1.46.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/common-2.6.0.jar"/>
@@ -62,14 +61,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.23.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar" sourcepath="/olca-core"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.0.0.jar" sourcepath="/olca-ecospold-2"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-0.3.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.0.0.jar" sourcepath="/olca-ilcd"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.0.0.jar" sourcepath="/olca-io"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
@@ -94,9 +86,21 @@
 	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xsd-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-geo-0.0.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="libs/httpclient-4.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/httpcore-4.1.jar"/>
+	<classpathentry kind="lib" path="libs/jersey-apache-client4-1.17.1.jar"/>
+	<classpathentry kind="lib" path="libs/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="libs/olca-core-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-ecospold-1-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-eigen-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-formula-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-geo-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-ilcd-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-io-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-jsonld-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-simapro-csv-1.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
