removed TrueZip dependencies; updated zt-zip

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,13 +17,11 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
-               libs/bcprov-jdk16-1.46.jar,\
                libs/bonecp-0.8.0.RELEASE.jar,\
                libs/common-2.6.0.jar,\
                libs/commons-beanutils-1.8.3.jar,\
                libs/commons-codec-1.5.jar,\
                libs/commons-collections-3.2.1.jar,\
-               libs/commons-compress-1.4.1.jar,\
                libs/commons-httpclient-3.1.jar,\
                libs/commons-io-2.4.jar,\
                libs/commons-jxpath-1.3.jar,\
@@ -101,18 +99,13 @@ bin.includes = plugin.xml,\
                libs/stax-api-1.0.1.jar,\
                libs/super-csv-2.1.0.jar,\
                libs/trove4j-3.0.3.jar,\
-               libs/truezip-driver-file-7.7.1.jar,\
-               libs/truezip-driver-zip-7.7.1.jar,\
-               libs/truezip-file-7.7.1.jar,\
-               libs/truezip-kernel-7.7.1.jar,\
-               libs/truezip-swing-7.7.1.jar,\
                libs/vecmath-1.3.2.jar,\
                libs/xml-apis-1.0.b2.jar,\
                libs/xmlbeans-2.3.0.jar,\
                libs/xsd-2.6.0.jar,\
-               libs/zt-zip-1.6.jar,\
                libs/jdom-1.0.jar,\
                libs/jersey-apache-client4-1.17.1.jar,\
                libs/olca-eigen-0.3.0.jar,\
                libs/compiler-0.8.17.jar,\
-               libs/olca-jsonld-1.0.0.jar
+               libs/olca-jsonld-1.0.0.jar,\
+               libs/zt-zip-1.8.jar
