--- a/olca-app/src/org/openlca/app/devtools/python/bindings.properties
+++ b/olca-app/src/org/openlca/app/devtools/python/bindings.properties
@@ -33,6 +33,7 @@ ProductSystem = org.openlca.core.model.ProductSystem
 Project = org.openlca.core.model.Project
 ProjectVariant = org.openlca.core.model.ProjectVariant
 Source = org.openlca.core.model.Source
+SocialIndicator = org.openlca.core.model.SocialIndicator
 Uncertainty = org.openlca.core.model.Uncertainty
 UncertaintyType = org.openlca.core.model.UncertaintyType
 Unit = org.openlca.core.model.Unit
