--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -22,6 +22,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.greendelta</groupId>
+			<artifactId>lca-cloud-api</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.9</version>
