--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -59,7 +59,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.23.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.0.0.jar" sourcepath="/olca-ecospold-2"/>
+	<classpathentry kind="lib" path="libs/olca-ecospold-2-1.5.0.jar" sourcepath="/olca-ecospold-2"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
@@ -92,7 +92,7 @@
 	<classpathentry kind="lib" path="libs/httpcore-4.1.jar"/>
 	<classpathentry kind="lib" path="libs/jersey-apache-client4-1.17.1.jar"/>
 	<classpathentry kind="lib" path="libs/json-simple-1.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-core-1.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/olca-core-1.5.0.jar" sourcepath="/olca-core"/>
 	<classpathentry kind="lib" path="libs/olca-ecospold-1-1.5.0.jar"/>
 	<classpathentry kind="lib" path="libs/olca-eigen-1.5.0.jar"/>
 	<classpathentry kind="lib" path="libs/olca-formula-1.5.0.jar"/>
