--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/compiler-0.8.17.jar"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/common-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-collections-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-httpclient-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.4.jar"/>
@@ -13,10 +13,10 @@
 	<classpathentry exported="true" kind="lib" path="libs/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-pool-1.5.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/compiler-0.8.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/derby-10.10.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/dom4j-1.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ecore-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-api-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-coverage-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-cql-10.3.jar"/>
@@ -34,9 +34,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/guava-14.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-tiff-1.1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-utilities-1.1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jackson-annotations-2.1.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.1.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jackson-databind-2.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_codec-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_core-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_imageio-1.1.jar"/>
@@ -44,31 +41,44 @@
 	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jdom-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jdom-2.0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jersey-apache-client-1.17.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jersey-client-1.17.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jersey-core-1.17.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jersey-multipart-1.18.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jersey-apache-client-1.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jersey-client-1.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jersey-core-1.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jersey-multipart-1.19.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jgridshift-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/joda-convert-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/joda-time-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jsr-275-1.0-beta-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jt-utils-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jt-zonalstats-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jts-1.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7-b3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lucene-analyzers-common-5.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/lucene-core-5.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.23.jar"/>
-	<classpathentry kind="lib" path="libs/olca-ecospold-2-1.5.0.jar" sourcepath="/olca-ecospold-2"/>
+	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/picocontainer-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/poi-3.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-3.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-schemas-3.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/poi-3.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-3.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-schemas-3.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-log4j12-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/stax-api-1.0.1.jar"/>
@@ -76,29 +86,10 @@
 	<classpathentry exported="true" kind="lib" path="libs/trove4j-3.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/vecmath-1.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xsd-2.6.0.jar"/>
-	<classpathentry kind="lib" path="libs/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="libs/jackson-jaxrs-base-2.5.2.jar"/>
-	<classpathentry kind="lib" path="libs/jackson-jaxrs-json-provider-2.5.2.jar"/>
-	<classpathentry kind="lib" path="libs/jackson-module-jaxb-annotations-2.5.2.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-analyzers-common-5.2.1.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-core-5.2.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/httpclient-4.1.1.jar"/>
-	<classpathentry kind="lib" path="libs/httpcore-4.1.jar"/>
-	<classpathentry kind="lib" path="libs/jersey-apache-client4-1.17.1.jar"/>
-	<classpathentry kind="lib" path="libs/json-simple-1.1.jar"/>
-	<classpathentry kind="lib" path="libs/olca-core-1.5.0.jar" sourcepath="/olca-core"/>
-	<classpathentry kind="lib" path="libs/olca-ecospold-1-1.5.0.jar"/>
-	<classpathentry kind="lib" path="libs/olca-eigen-1.5.0.jar"/>
-	<classpathentry kind="lib" path="libs/olca-formula-1.5.0.jar"/>
-	<classpathentry kind="lib" path="libs/olca-geo-1.5.0.jar"/>
-	<classpathentry kind="lib" path="libs/olca-ilcd-1.5.0.jar"/>
-	<classpathentry kind="lib" path="libs/olca-io-1.5.0.jar"/>
-	<classpathentry kind="lib" path="libs/olca-jsonld-1.5.0.jar" sourcepath="/olca-jsonld"/>
-	<classpathentry kind="lib" path="libs/olca-simapro-csv-1.5.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
