--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,4 +17,91 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
-               libs/
+               libs/bonecp-0.8.0.RELEASE.jar,\
+               libs/common-2.6.0.jar,\
+               libs/commons-beanutils-1.8.3.jar,\
+               libs/commons-codec-1.10.jar,\
+               libs/commons-collections-3.2.1.jar,\
+               libs/commons-httpclient-3.1.jar,\
+               libs/commons-io-2.4.jar,\
+               libs/commons-jxpath-1.3.jar,\
+               libs/commons-lang3-3.1.jar,\
+               libs/commons-logging-1.1.1.jar,\
+               libs/commons-math3-3.1.1.jar,\
+               libs/commons-pool-1.5.4.jar,\
+               libs/compiler-0.8.17.jar,\
+               libs/derby-10.10.1.1.jar,\
+               libs/ecore-2.6.1.jar,\
+               libs/gson-2.2.4.jar,\
+               libs/gt-api-10.3.jar,\
+               libs/gt-coverage-10.3.jar,\
+               libs/gt-cql-10.3.jar,\
+               libs/gt-data-10.3.jar,\
+               libs/gt-graph-10.3.jar,\
+               libs/gt-main-10.3.jar,\
+               libs/gt-metadata-10.3.jar,\
+               libs/gt-opengis-10.3.jar,\
+               libs/gt-referencing-10.3.jar,\
+               libs/gt-render-10.3.jar,\
+               libs/gt-shapefile-10.3.jar,\
+               libs/gt-swt-10.3.jar,\
+               libs/gt-xsd-core-10.3.jar,\
+               libs/gt-xsd-kml-10.3.jar,\
+               libs/guava-14.0.1.jar,\
+               libs/imageio-ext-tiff-1.1.7.jar,\
+               libs/imageio-ext-utilities-1.1.7.jar,\
+               libs/jai_codec-1.1.3.jar,\
+               libs/jai_core-1.1.3.jar,\
+               libs/jai_imageio-1.1.jar,\
+               libs/javax.persistence-2.0.0.jar,\
+               libs/jcl-over-slf4j-1.7.2.jar,\
+               libs/jdom-1.0.jar,\
+               libs/jdom-2.0.2.jar,\
+               libs/jersey-apache-client-1.19.jar,\
+               libs/jersey-client-1.19.jar,\
+               libs/jersey-core-1.19.jar,\
+               libs/jersey-multipart-1.19.jar,\
+               libs/jgridshift-1.0.jar,\
+               libs/joda-convert-1.3.1.jar,\
+               libs/joda-time-2.2.jar,\
+               libs/jsr-275-1.0-beta-2.jar,\
+               libs/jsr311-api-1.1.1.jar,\
+               libs/jt-utils-1.3.1.jar,\
+               libs/jt-zonalstats-1.3.1.jar,\
+               libs/jts-1.13.jar,\
+               libs/jython-standalone-2.7-b3.jar,\
+               libs/log4j-1.2.17.jar,\
+               libs/lucene-analyzers-common-5.2.1.jar,\
+               libs/lucene-core-5.2.1.jar,\
+               libs/mimepull-1.9.3.jar,\
+               libs/mysql-connector-java-5.1.25.jar,\
+               libs/olca-cloud-1.5.0.jar,\
+               libs/olca-core-1.5.0.jar,\
+               libs/olca-ecospold-1-1.5.0.jar,\
+               libs/olca-ecospold-2-1.5.0.jar,\
+               libs/olca-eigen-1.5.0.jar,\
+               libs/olca-formula-1.5.0.jar,\
+               libs/olca-geo-1.5.0.jar,\
+               libs/olca-ilcd-1.5.0.jar,\
+               libs/olca-io-1.5.0.jar,\
+               libs/olca-jsonld-1.5.0.jar,\
+               libs/olca-simapro-csv-1.5.0.jar,\
+               libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar,\
+               libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar,\
+               libs/org.eclipse.persistence.core-2.4.0.jar,\
+               libs/org.eclipse.persistence.jpa-2.4.0.jar,\
+               libs/org.eclipse.persistence.jpa.jpql-2.4.0.jar,\
+               libs/picocontainer-1.2.jar,\
+               libs/poi-3.12.jar,\
+               libs/poi-ooxml-3.12.jar,\
+               libs/poi-ooxml-schemas-3.12.jar,\
+               libs/slf4j-api-1.7.2.jar,\
+               libs/slf4j-log4j12-1.7.2.jar,\
+               libs/stax-api-1.0.1.jar,\
+               libs/super-csv-2.1.0.jar,\
+               libs/trove4j-3.0.3.jar,\
+               libs/vecmath-1.3.2.jar,\
+               libs/xml-apis-1.0.b2.jar,\
+               libs/xmlbeans-2.6.0.jar,\
+               libs/xsd-2.6.0.jar,\
+               libs/zt-zip-1.8.jar
