--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -56,7 +56,7 @@
 			<artifactId>olca-io</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.openlca</groupId>
 			<artifactId>olca-jsonld</artifactId>
@@ -209,7 +209,11 @@
 			<version>2.2</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.mapdb</groupId>
+			<artifactId>mapdb</artifactId>
+			<version>2.0-beta7</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.geotools</groupId>
