--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -101,4 +101,6 @@ bin.includes = plugin.xml,\
                libs/xml-apis-1.0.b2.jar,\
                libs/xmlbeans-2.6.0.jar,\
                libs/xsd-2.6.0.jar,\
-               libs/zt-zip-1.8.jar
+               libs/zt-zip-1.8.jar,\
+               libs/commons-codec-1.9.jar,\
+               libs/mapdb-2.0-beta7.jar
