--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -341,6 +341,13 @@
             id="views.navigation"
             name="%Navigation">
       </view>  
+      <view
+            allowMultiple="false"
+            class="org.openlca.app.cloud.navigation.RepositoryNavigator"
+            icon="icons/categories.gif"
+            id="views.repository.navigation"
+            name="#Repository">
+      </view>  
    </extension>
    
    <extension
@@ -396,7 +403,7 @@
          </property>
          <property
                name="aboutText"
-               value="openLCA 1.4.2&#x0A;&#x0A;Copyright (c) 2007 - 2015 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA &#x0A;project and other open source software.">
+               value="openLCA 1.5.0&#x0A;&#x0A;Copyright (c) 2007 - 2015 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA &#x0A;project and other open source software.">
          </property>
          <property
                name="aboutImage"
@@ -449,6 +456,9 @@
 		         </property>
 			</options>           
       </viewer>
+      <viewer
+            viewerId="views.repository.navigation">
+	  </viewer>
       <viewerContentBinding
             viewerId="views.navigation">
          <includes>
@@ -470,11 +480,28 @@
             </contentExtension>
          </includes>
       </viewerContentBinding>
+      <viewerContentBinding
+            viewerId="views.repository.navigation">
+         <includes>
+            <contentExtension
+                  isRoot="true"
+                  pattern="repository.navigatorcontent.context">
+            </contentExtension>
+         </includes>
+      </viewerContentBinding>
       <viewerActionBinding
             viewerId="views.navigation">
          <includes>
             <actionExtension
                   pattern="actionprovider.navigation">
+            </actionExtension>
+         </includes>
+      </viewerActionBinding>
+      <viewerActionBinding
+            viewerId="views.repository.navigation">
+         <includes>
+            <actionExtension
+                  pattern="actionprovider.repository.navigation">
             </actionExtension>
          </includes>
       </viewerActionBinding>
@@ -515,9 +542,36 @@
             </instanceof>
          </possibleChildren>
       </navigatorContent>
+      <navigatorContent
+            activeByDefault="true"
+            contentProvider="org.openlca.app.navigation.NavigationContentProvider"
+            id="repository.navigatorcontent.context"
+            labelProvider="org.openlca.app.cloud.navigation.NavigationLabelProvider"
+            name="%DataProvider"
+            priority="normal">
+         <triggerPoints>
+            <instanceof
+                  value="org.openlca.app.navigation.INavigationElement">
+            </instanceof>
+         </triggerPoints>
+         <commonSorter
+               class="org.openlca.app.navigation.NavigationSorter">
+         </commonSorter>
+         <possibleChildren>
+            <instanceof
+                  value="org.openlca.app.navigation.INavigationElement">
+            </instanceof>
+         </possibleChildren>
+      </navigatorContent>
       <actionProvider
             class="org.openlca.app.navigation.NavigationActionProvider"
             id="actionprovider.navigation"
+            priority="normal">
+         <enablement></enablement>
+      </actionProvider>
+      <actionProvider
+            class="org.openlca.app.cloud.navigation.NavigationActionProvider"
+            id="actionprovider.repository.navigation"
             priority="normal">
          <enablement></enablement>
       </actionProvider>
