--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -117,14 +117,14 @@
       <editor
             class="org.openlca.app.editors.costs.CostCategoryEditor"
             default="false"
-            icon="icons/cost_calc_icon.png"
+            icon="icons/cost_category.png"
             id="editors.costcategory"
             name="#Cost category">
       </editor>
       <editor
             class="org.openlca.app.editors.costs.CurrencyEditor"
             default="false"
-            icon="icons/cost_calc_icon.png"
+            icon="icons/currency.png"
             id="editors.currency"
             name="#Currency">
       </editor>
@@ -214,7 +214,7 @@
 	  <editor
             class="org.openlca.app.editors.locations.LocationEditor"
             default="false"
-            icon="icons/location_editor.png"
+            icon="icons/location.png"
             id="editors.location"
             name="Location editor">
       </editor>	  
@@ -245,7 +245,7 @@
       </wizard>
       <wizard
             class="org.openlca.app.wizards.LocationWizard"
-            icon="icons/actor_obj_new.png"
+            icon="icons/location_new.png"
             id="wizards.new.location"
             name="Locations wizard">
       </wizard>
@@ -299,16 +299,19 @@
       </wizard>
       <wizard
             class="org.openlca.app.wizards.SocialIndicatorWizard"
+            icon="icons/indicator_obj_new.png"
             id="wizards.new.socialindicator"
             name="#Social indicator">
       </wizard>
       <wizard
             class="org.openlca.app.wizards.CostCategoryWizard"
+            icon="icons/cost_category_new.png"
             id="wizards.new.costcategory"
             name="#Cost category">
       </wizard>
       <wizard
             class="org.openlca.app.wizards.CurrencyWizard"
+            icon="icons/currency_new.png"
             id="wizards.new.currency"
             name="#Currency">
       </wizard>
