export RiskLevel to Python API; new version 1.5.0alpha6

--- a/olca-app/src/org/openlca/app/devtools/python/bindings.properties
+++ b/olca-app/src/org/openlca/app/devtools/python/bindings.properties
@@ -30,6 +30,7 @@ ProcessType = org.openlca.core.model.ProcessType
 ProductSystem = org.openlca.core.model.ProductSystem
 Project = org.openlca.core.model.Project
 ProjectVariant = org.openlca.core.model.ProjectVariant
+RiskLevel = org.openlca.core.model.RiskLevel
 Source = org.openlca.core.model.Source
 SocialIndicator = org.openlca.core.model.SocialIndicator
 Uncertainty = org.openlca.core.model.Uncertainty
