--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -397,6 +397,12 @@
             id="views.problems"
             name="Problems"
             restorable="true">
+      </view>
+      <view
+            class="org.openlca.app.cloud.ui.diff.SyncView"
+            id="views.cloud.sync"
+            name="Sync repository"
+            restorable="true">
       </view>  
    </extension>
    
